VSE: Strip length jumps to a negative number #46657

Closed
opened 2015-11-01 10:04:14 +01:00 by Alberto Mardegan · 7 comments

System Information
Ubuntu 14.04

Blender Version
Broken: 2.76 48f7dd6
Worked: never

Short description of error
When changing the length of a strip associated with a Speed Control effect, sometimes the desired value gets replaced by a negative number.

Exact steps for others to reproduce the error
Please use the attached SpeedBug.blend .blend file and the movie from http://www.mardy.it/archivos/mappero-search.ogv (it's about 7 MB only). Select the strip mappero-search.003 (the one under the longer Speed control effect), move the mouse to the Length input control (which currently shows 151), click, and type 20.

Press Enter, and the speed will be now "-22"!

**System Information** Ubuntu 14.04 **Blender Version** Broken: 2.76 48f7dd6 Worked: never **Short description of error** When changing the length of a strip associated with a Speed Control effect, sometimes the desired value gets replaced by a negative number. **Exact steps for others to reproduce the error** Please use the attached [SpeedBug.blend](https://archive.blender.org/developer/F249313/SpeedBug.blend) .blend file and the movie from http://www.mardy.it/archivos/mappero-search.ogv (it's about 7 MB only). Select the strip mappero-search.003 (the one under the longer Speed control effect), move the mouse to the Length input control (which currently shows 151), click, and type 20. Press Enter, and the speed will be now "-22"!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @mardy

Added subscriber: @mardy
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscribers: @Psy-Fi, @ideasman42, @Sergey

Added subscribers: @Psy-Fi, @ideasman42, @Sergey

Can confirm the issue.

Will look into it unless @ideasman42 or @Psy-Fi is faster in this :)

Can confirm the issue. Will look into it unless @ideasman42 or @Psy-Fi is faster in this :)

This issue was referenced by ac7c3e048b

This issue was referenced by ac7c3e048b54a2342b1534fd56d91a450e77b1f6
Bastien Montagne self-assigned this 2016-01-22 12:09:57 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46657
No description provided.