Fix T46657: VSE: Strip length jumps to a negative number.